# ChangeLog for eix - Ebuild IndeX for portage

*eix-0.30.8
	Martin Väth <martin at mvath.de>:
	- Order mask lists (/etc/portage/package.*) more similar to portage:
	  a) Wildcards are treated alphabetically
	  b) More specifications (slot, repo, version, ...) increase priority
	  However, b) is only distinguished for identical wildcards;
	  this slightly deviates from portage.
	- Fix eix-header: Let -f create fresh data, not add to previous -f
	- eix-header: Special treatment of empty OV value
	- eix-remote: Compatibility fix for recent changes in zugaina, see
	  https://github.com/vaeth/eix/issues/6

*eix-0.30.7
	Martin Väth <martin at mvath.de>:
	- Support @profile: Add it to database (new database version: 34)
	- new option --profile{,+,-}
	- new package property "profile"
	- include profile in "allsetnames"
	- encode @profile as colors in default format strings
	- separate PORTDIR_OVERLAY by newlines (for output in other programs)
	- internal tools: avoid GREP_OPTIONS for compatibility with grep-2.21

*eix-0.30.6
	Martin Väth <martin at mvath.de>:
	- Fix: pass EAPI in environment for cache method ebuild*.
	  Thanks to Michał Górny for the analysis, see
	  https://bugs.gentoo.org/show_bug.cgi?id=532952
	- internal: silence some stupid cpplint warnings

*eix-0.30.5
	Martin Väth <martin at mvath.de>:
	- Let PORTAGE_REPOSITORIES _override_ (not only add to) repos.conf
	  to match with portage's behaviour
	- zsh-completion: fix checks for _tags
	- internal: Replace type(...) casting by static_cast<type>(...)
	- German translation: Many fixes and extensions by
	  André Jaenisch <andre.jaenisch at openmailbox.org>
	- Bump gettext

*eix-0.30.4
	Martin Väth <martin at mvath.de>:
	- Fix for lines ending with EOF (regression introduced in eix-0.30.3),
	  see https://github.com/vaeth/eix/issues/3
	- Support PORTAGE_REPOSITORIES
	- internal: Support parsing from mem for varsreader.cc

*eix-0.30.3
	Martin Väth <martin at mvath.de>: